--- a/data/i18n/messages.pot
+++ b/data/i18n/messages.pot
@@ -3,14 +3,14 @@
 # Attention! Don't edit this file manually! This file is auto generated and will be overriden!
 #
 # Copyright (c) 2018 JuKuSoft.com
-# This file is distributed under the same license as the mmo-engine-client-application-layer package.
+# This file is distributed under the same license as the mmo-engine-client-game-view-layer package.
 # JuKu my-mail@example.com, 2018.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 102018-10-10 17:37:802+0100\n"
+"POT-Creation-Date: 102018-10-10 18:42:266+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Auto generated file\n"
 "Language: en\n"
@@ -18,10 +18,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: file Initializer.java line 89
-msgid "Server Error!"
-msgstr "Server Error!"
-
-#: file Initializer.java line 133
-msgid "Updater"
-msgstr "Updater"
+#: file InputLayer.java line 99
+#: file InputLayer.java line 95
+msgid "Error!"
+msgstr "Error!"
