--- a/data/i18n/messages.pot
+++ b/data/i18n/messages.pot
@@ -9,7 +9,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: 0.0.20-SNAPSHOT\n"
+"Project-Id-Version: 0.0.21-SNAPSHOT-SNAPSHOT\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Auto generated file\n"
 "Language: en\n"
